[project]
name = "wastewater-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nicholas Minor", email = "nicholasrminor@gmail.com" },
    { name = "Devon Gregory", email = "virologistd@gmail.com" },
    { name = "William Gardner", email = "wkgardner@wisc.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "altair[all]>=5.5.0",
    "great-tables>=0.16.1",
    "ipykernel>=6.29.5",
    "itables>=2.2.4",
    "jupyter>=1.1.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.0",
    "polars[async,excel,openpyxl,pandas,plot,pyarrow,xlsx2csv,xlsxwriter]>=1.21.0",
    "pysam>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.26.0",
    "loguru>=0.7.3",
    "marimo[sql]>=0.11.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "tox>=4.24.1",
]
